# x-auto

./: .env.example  .gitignore  CHANGELOG.md  README.md  progress.md  pyproject.toml
docs/superpowers/history/: 2026-04-24-progress-archive.md
docs/superpowers/plans/: 2026-04-21-langfuse-graph-observability.md  2026-04-21-scheduler-only-feed-engage.md  2026-04-22-feed-engage-graph-optimization.md  2026-04-23-feed-engage-ai-required.md  2026-04-23-graph-status-cleanup.md  2026-04-23-remove-request-candidate-injection.md
docs/superpowers/specs/: 2026-04-21-langfuse-graph-observability-design.md
src/x_atuo/: __init__.py
src/x_atuo/automation/: __init__.py  api.py  author_alpha_graph.py  author_alpha_storage.py  author_alpha_sync.py  config.py  graph.py  observability.py  policies.py  scheduler.py  schemas.py  state.py  storage.py
src/x_atuo/core/: __init__.py  ai_client.py  github_repo_client.py  twitter_client.py  twitter_engage_service.py  twitter_models.py  twitter_native_adapters.py  twitter_runtime.py  x_graphql.py  x_native_client.py  x_parser.py  x_timeline.py  x_web_analytics.py  x_web_normalization.py  x_web_notifications.py  (+1 more)
tests/: conftest.py  test_account_analytics.py  test_author_alpha_execution.py  test_author_alpha_storage.py  test_author_alpha_sync.py  test_langfuse_observability.py  test_no_vendored_runtime.py  test_project_docs.py  test_smoke.py  test_twitter_native_adapters.py  test_twitter_native_migration.py  test_vendored_surface.py  test_x_native_client.py  test_x_parser.py  test_x_timeline.py  test_x_web_shared.py  test_x_web_transport.py
